Worked on Entity, ResourceEntities, and Interfaces

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -57,12 +57,18 @@
      <Compile Include="Assets\Scripts\AI\Dweller.cs" />
      <Compile Include="Assets\Scripts\AI\EntityMovement.cs" />
      <Compile Include="Assets\Scripts\AI\PathFinder.cs" />
-     <Compile Include="Assets\Scripts\Entity\ES_Task.cs" />
-     <Compile Include="Assets\Scripts\Entity\ES_Wander.cs" />
      <Compile Include="Assets\Scripts\Entity\Entity.cs" />
      <Compile Include="Assets\Scripts\Entity\EntityEnums.cs" />
-     <Compile Include="Assets\Scripts\Entity\EntityStateController.cs" />
-     <Compile Include="Assets\Scripts\Entity\IEntityState.cs" />
+     <Compile Include="Assets\Scripts\Entity\Interactables\Entities\EntityRock.cs" />
+     <Compile Include="Assets\Scripts\Entity\Interactables\Entities\EntityTree.cs" />
+     <Compile Include="Assets\Scripts\Entity\Interactables\IChoppable.cs" />
+     <Compile Include="Assets\Scripts\Entity\Interactables\IGatherable.cs" />
+     <Compile Include="Assets\Scripts\Entity\Interactables\IMineable.cs" />
+     <Compile Include="Assets\Scripts\Entity\Interactables\ResourceEntity.cs" />
+     <Compile Include="Assets\Scripts\Entity\State\ES_Task.cs" />
+     <Compile Include="Assets\Scripts\Entity\State\ES_Wander.cs" />
+     <Compile Include="Assets\Scripts\Entity\State\EntityStateController.cs" />
+     <Compile Include="Assets\Scripts\Entity\State\IEntityState.cs" />
      <Compile Include="Assets\Scripts\Game\GameManager.cs" />
      <Compile Include="Assets\Scripts\Game\GameState\GameEventStateMachine.cs" />
      <Compile Include="Assets\Scripts\Game\GameState\GameStateBuild.cs" />
